--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Parallax</title>	
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-	<script src="../lib/jquery.js"></script>
+	<script src="jquery.js"></script>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
